# rust-rocket-sample

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  env_template
.github/: CODEOWNERS
.github/workflows/: ci.yaml
src/: main.rs
src/db/: customer.rs  mod.rs
src/errors/: response.rs
src/fairings/: cors.rs  counter.rs  mod.rs
src/models/: customer.rs  mod.rs  response.rs
src/request_guards/: basic.rs
src/routes/: customer.rs  mod.rs
src/tests/: mod.rs
