[package]
name = "rust-rocket-sample"
description = "Rocket.rs CRUD REST API example"
version = "1.3.0"
edition = "2021"
authors = ["TaeyoonKwon <tabriell@gmail.com>"]
readme = "README.md"
repository = "https://github.com/TaeyoonKwon/rust-rocket-sample"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket =  { version = "0.5.0-rc.2", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
okapi = { version = "0.6.0-alpha-1" }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "secrets"] }
dotenv = "0.15.0"
mongodb = "2.1.0"
futures = "0.3"
chrono = "0.4"
